@@ -12,6 +12,7 @@ V0.20.0
  * Guarantee that the width hint of an icon-only button isn't smaller than its height hint.
  * Fixed a case of underlined shortcuts in tray menus without Alt being pressed.
  * Added an option (to Kvantum Manager) for styling vertical toolbars. It's disabled by default and also when "single_top_toolbar" is "true".
+ * Removed the workaround for Qt's hover bug (not because the latter is fixed but because the workaround didn't work well with scale factors due to another issue in Qt).
 
 V0.19.0
 ---------
